<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">DAVx⁵</string>
    <string name="account_invalid">Account does not exist (anymore)</string>
    <string name="account_type" translatable="false">bitfire.at.davdroid</string>
    <string name="account_type_address_book" translatable="false">at.bitfire.davdroid.address_book</string>
    <string name="account_title_address_book">DAVx⁵ Address book</string>
    <string name="account_prefs_use_app">Don\'t change the account here! Directly use the app to manage accounts instead.</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_deny">Cancel</string>
    <string name="dialog_enable">Enable</string>
    <string name="field_required">This field is required</string>
    <string name="help">Help</string>
    <string name="navigate_up">Navigate up</string>
    <string name="options_menu">Options menu</string>
    <string name="share">Share</string>
    <string name="sync_started">Synchronization started/enqueued</string>
    <string name="database_destructive_migration_title">Database corrupted</string>
    <string name="database_destructive_migration_text">All accounts have been removed locally.</string>
    <string name="notification_channel_debugging">Debugging</string>
    <string name="notification_channel_general">Other important messages</string>
    <string name="notification_channel_status">Low-priority status messages</string>
    <string name="notification_channel_sync">Synchronization</string>
    <string name="notification_channel_sync_errors">Synchronization errors</string>
    <string name="notification_channel_sync_errors_desc">Important errors which stop synchronization like unexpected server replies</string>
    <string name="notification_channel_sync_warnings">Synchronization warnings</string>
    <string name="notification_channel_sync_warnings_desc">Non-fatal synchronization problems like certain invalid files</string>
    <string name="notification_channel_sync_io_errors">Network and I/O errors</string>
    <string name="notification_channel_sync_io_errors_desc">Timeouts, connection problems, etc. (often temporary)</string>
    <string name="intro_slogan1">Your data. Your choice.</string>
    <string name="intro_slogan2">Take control.</string>
    <string name="intro_battery_title">Regular sync intervals</string>
    <string name="intro_battery_text">For synchronization at regular intervals, %s must be allowed to run in the background. Otherwise, Android may pause synchronization at any time.</string>
    <string name="intro_battery_dont_show">I don\'t need regular sync intervals.*</string>
    <string name="intro_autostart_title">%s compatibility</string>
    <string name="intro_autostart_text">Vendor-specific firmware may block synchronization. If you\'re affected, you can only resolve this manually.</string>
    <string name="intro_autostart_dont_show">I have done the required settings. Don\'t remind me anymore.*</string>
    <string name="intro_leave_unchecked">* Leave unchecked to be reminded later. Can be reset in app settings / %s.</string>
    <string name="intro_more_info">More information</string>
    <string name="intro_tasks_jtx">jtx Board</string>
    <string name="intro_tasks_jtx_info"><![CDATA[Supports sync of Tasks, Journals and Notes.]]></string>
    <string name="intro_tasks_title">Tasks support</string>
    <string name="intro_tasks_text1">If tasks are supported by your server, they can be synchronized with a supported tasks app:</string>
    <string name="intro_tasks_opentasks">OpenTasks</string>
    <string name="intro_tasks_opentasks_info">Doesn\'t seem to be developed anymore – not recommended.</string>
    <string name="intro_tasks_tasks_org">Tasks.org</string>
    <string name="intro_tasks_tasks_org_info"><![CDATA[Some features <a href="https://www.davx5.com/faq/tasks/advanced-task-features">are not supported</a>.]]></string>
    <string name="intro_tasks_no_app_store">No app store available</string>
    <string name="intro_tasks_dont_show">I don\'t need tasks support.*</string>
    <string name="intro_backups_title">Backups reminder</string>
    <string name="intro_backups_important">It\'s important to back up your data (including contacts and calendars) regularly to prevent potential data loss.</string>
    <string name="intro_backups_something_wrong">Something can always go wrong, whether on the server, within %s, or in other apps, which for instance might accidentally delete all calendar entries. (The deletions would then be synchronized to the server.)</string>
    <string name="intro_backups_accept">I already have a working backup strategy or I don\'t need one.</string>
    <string name="intro_open_source_title">Open-source software</string>
    <string name="intro_open_source_text">We\'re happy that you use %s, which is open-source software. Development, maintenance and support are hard work. Please consider contributing (there are many ways) or a donation. It would be highly appreciated!</string>
    <string name="intro_open_source_details">How to contribute/donate</string>
    <string name="intro_open_source_dont_show">Don\'t remind me for</string>
    <plurals name="intro_open_source_dont_show_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <string name="intro_next">Next</string>
    <string name="permissions_title">Permissions</string>
    <string name="permissions_text">%s requires permissions to work properly.</string>
    <string name="permissions_all_title">All of the below</string>
    <string name="permissions_all_status_off">Use this to enable all features (recommended)</string>
    <string name="permissions_all_status_on">All permissions granted</string>
    <string name="permissions_contacts_title">Contacts permissions</string>
    <string name="permissions_contacts_status_off">No contact sync (not recommended)</string>
    <string name="permissions_contacts_status_on">Contact sync possible</string>
    <string name="permissions_calendar_title">Calendar permissions</string>
    <string name="permissions_calendar_status_off">No calendar sync (not recommended)</string>
    <string name="permissions_calendar_status_on">Calendar sync possible</string>
    <string name="permissions_notification_title">Notification permission</string>
    <string name="permissions_notification_status_off">Notifications disabled (not recommended)</string>
    <string name="permissions_notification_status_on">Notifications enabled</string>
    <string name="permissions_jtx_title">jtx Board permissions</string>
    <string name="permissions_opentasks_title">OpenTasks permissions</string>
    <string name="permissions_tasksorg_title">Tasks permissions</string>
    <string name="permissions_tasks_status_off">No task sync</string>
    <string name="permissions_tasks_status_on">Task sync possible</string>
    <string name="permissions_autoreset_title">Keep permissions</string>
    <string name="permissions_autoreset_status_off">Permissions may be reset automatically (not recommended)</string>
    <string name="permissions_autoreset_status_on">Permissions won\'t be reset automatically</string>
    <string name="permissions_autoreset_instruction">Click Permissions > uncheck \"Remove permissions if app isn\'t used\"</string>
    <string name="permissions_app_settings_hint">If a switch doesn\'t work, use app settings / Permissions.</string>
    <string name="permissions_app_settings">App settings</string>
    <string name="wifi_permissions_label">WiFi SSID permissions</string>
    <string name="wifi_permissions_intro">To be able to access the current WiFi name (SSID), these conditions must be met:</string>
    <string name="wifi_permissions_location_permission">Precise location permission</string>
    <string name="wifi_permissions_location_permission_on">Location permission granted</string>
    <string name="wifi_permissions_location_permission_off">Location permission denied</string>
    <string name="wifi_permissions_background_location_permission">Background location permission</string>
    <string name="account_synchronize_now">Synchronize now</string>
    <string name="account_settings">Account settings</string>
    <string name="account_delete">Delete account</string>
    <string name="login_login">Login</string>
    <string name="login_type_email">Login with email address</string>
    <string name="login_email_address">Email address</string>
    <string name="login_password">Password</string>
    <string name="login_type_url">Login with URL and user name</string>
    <string name="login_user_name">User name</string>
    <string name="login_base_url">Base URL</string>
    <string name="login_select_certificate">Select certificate</string>
    <string name="settings_sync">Synchronization</string>
    <string name="settings_sync_interval_contacts">Contacts sync. interval</string>
    <string name="settings_sync_interval_calendars">Calendars sync. interval</string>
    <string name="settings_sync_interval_tasks">Tasks sync. interval</string>
    <string name="settings_sync_wifi_only">Sync over WiFi only</string>
    <string name="settings_sync_wifi_only_on">Synchronization is restricted to WiFi connections</string>
    <string name="settings_sync_wifi_only_off">Connection type is not taken into consideration</string>
    <string name="settings_sync_wifi_only_ssids">WiFi SSID restriction</string>
    <string name="settings_sync_wifi_only_ssids_message">Comma-separated names (SSIDs) of allowed WiFi networks (leave blank for all)</string>
    <string name="settings_ignore_vpns">VPN requires underlying Internet</string>
    <string name="settings_ignore_vpns_on">VPN without underlying validated Internet connection is not enough to run synchronization (recommended)</string>
    <string name="settings_ignore_vpns_off">VPN without underlying validated Internet connection is enough to run synchronization</string>
    <string name="settings_authentication">Authentication</string>
    <string name="settings_username">User name</string>
    <string name="settings_password">Password or app password</string>
    <string name="settings_password_summary">Update the password according to your server.</string>
    <string name="settings_certificate_alias">Client certificate</string>
    <string name="settings_caldav">CalDAV</string>
    <string name="settings_sync_time_range_past">Past event time limit</string>
    <string name="settings_sync_time_range_past_message">Events which are more than this number of days in the past will be ignored (may be 0). Leave blank to synchronize all events.</string>
    <string name="settings_default_alarm">Default reminder</string>
    <string name="settings_default_alarm_message">If default reminders shall be created for events without reminder: the desired number of minutes before the event. Leave blank to disable default reminders.</string>
    <string name="settings_manage_calendar_colors">Manage calendar colors</string>
    <string name="settings_manage_calendar_colors_on">Calendar colors are reset at each sync</string>
    <string name="settings_manage_calendar_colors_off">Calendar colors can be set by other apps</string>
    <string name="settings_event_colors">Event color support</string>
    <string name="settings_event_colors_on">Event colors are synced</string>
    <string name="settings_event_colors_off">Event colors are not synced</string>
    <string name="settings_carddav">CardDAV</string>
    <string name="settings_contact_group_method">Contact group method</string>
    <string name="webdav_add_mount_display_name">Display name</string>
    <string name="webdav_add_mount_url">WebDAV URL</string>
    <string name="webdav_add_mount_username">User name</string>
    <string name="webdav_add_mount_password">Password</string>
</resources>