<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_sync">

        <ListPreference
            android:persistent="false"
            android:title="@string/settings_sync_interval_contacts"
            android:icon="@drawable/ic_contacts"
            android:entries="@array/settings_sync_interval_names"
            android:entryValues="@array/settings_sync_interval_seconds"/>

        <ListPreference
            android:persistent="false"
            android:title="@string/settings_sync_interval_calendars"
            android:icon="@drawable/ic_today"
            android:entries="@array/settings_sync_interval_names"
            android:entryValues="@array/settings_sync_interval_seconds"/>

        <ListPreference
            android:persistent="false"
            android:title="@string/settings_sync_interval_tasks"
            android:icon="@drawable/ic_playlist_add_check"
            android:entries="@array/settings_sync_interval_names"
            android:entryValues="@array/settings_sync_interval_seconds"/>

        <SwitchPreferenceCompat
            android:persistent="false"
            android:title="@string/settings_sync_wifi_only"
            android:icon="@drawable/ic_network_wifi"
            android:summaryOn="@string/settings_sync_wifi_only_on"
            android:summaryOff="@string/settings_sync_wifi_only_off" />

        <EditTextPreference
            android:persistent="false"
            android:title="@string/settings_sync_wifi_only_ssids"
            android:dialogMessage="@string/settings_sync_wifi_only_ssids_message"/>

        <SwitchPreferenceCompat
            android:persistent="false"
            android:title="@string/settings_ignore_vpns"
            android:summaryOn="@string/settings_ignore_vpns_on"
            android:summaryOff="@string/settings_ignore_vpns_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_authentication">

        <EditTextPreference
            android:title="@string/settings_username"
            android:icon="@drawable/ic_login"
            android:persistent="false"
            android:dialogTitle="@string/settings_enter_username" />

        <EditTextPreference
            android:title="@string/settings_password"
            android:persistent="false"
            android:summary="@string/settings_password_summary"
            android:dialogTitle="@string/settings_enter_password"/>

        <Preference
            android:title="@string/settings_certificate_alias"
            android:persistent="false"/>

        <Preference
            android:title="@string/settings_oauth"
            android:summary="@string/settings_oauth_summary"
            android:icon="@drawable/ic_login" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_caldav">

        <EditTextPreference
            android:persistent="false"
            android:title="@string/settings_sync_time_range_past"
            android:icon="@drawable/ic_date_range"
            android:dialogMessage="@string/settings_sync_time_range_past_message"
            android:inputType="number"/>

        <EditTextPreference
            android:persistent="false"
            android:title="@string/settings_default_alarm"
            android:dialogMessage="@string/settings_default_alarm_message"
            android:inputType="number"/>

        <SwitchPreferenceCompat
            android:persistent="false"
            android:title="@string/settings_manage_calendar_colors"
            android:summaryOn="@string/settings_manage_calendar_colors_on"
            android:summaryOff="@string/settings_manage_calendar_colors_off"/>

        <SwitchPreferenceCompat
            android:persistent="false"
            android:title="@string/settings_event_colors"
            android:summaryOn="@string/settings_event_colors_on"
            android:summaryOff="@string/settings_event_colors_off"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_carddav">

        <ListPreference
            android:persistent="false"
            android:title="@string/settings_contact_group_method"
            android:icon="@drawable/ic_group"
            android:entries="@array/settings_contact_group_method_entries"
            android:entryValues="@array/settings_contact_group_method_values"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>