<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/sync_now"
          android:icon="@drawable/ic_sync_action"
          android:title="@string/account_synchronize_now"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/settings"
          android:icon="@drawable/ic_settings_action"
          android:title="@string/account_settings"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/delete_account"
          android:title="@string/account_delete"/>

</menu>